# radio-deb

./: .gitignore  LICENSE.txt  README.md  next-development.md  package-lock.json  package.json  vite.config.js
docs/source_radio_indonesia/: radio-indonesia.PLS  radio-indonesia.json  radio-indonesia.m3u  radio-indonesia.sql  radio-indonesia.xspf
src/: icons.js  index.html  main.js  manager.html  manager.js  station-store.js  station-store.test.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: stations.json
src-tauri/src/: lib.rs  main.rs  single_instance.rs
src/data/: indonesia.js  international.js
