[package]
name = "classic-radio"
version = "0.1.0"
description = "Classic Radio desktop player"
authors = ["Sarta"]
edition = "2021"

[lib]
name = "classic_radio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
