[package]
name = "classic-radio"
version = "0.3.1"
description = "Classic Radio desktop player"
authors = ["Sarta"]
edition = "2021"
default-run = "classic-radio"

[lib]
name = "classic_radio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "classic-radio"
path = "src/main.rs"

[[bin]]
name = "classic-radio-cli"
path = "src/bin/classic-radio-cli.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
